[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reap-web-harvester"
version = "1.1.0"
description = "A fast, beautiful, and modular website archiver."
readme = "README.md"
authors = [
    { name = "Attaya Arka", email = "attayaarka76p@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "rich>=12.0.0",
]

[project.optional-dependencies]
# Optional features can be installed separately to keep the core light
optimize = ["Pillow>=9.0.0"]
pdf = ["playwright>=1.20.0"]

[project.scripts]
reap = "reap.main:main"