[build-system]
# Constrain setuptools below 77.0.0 to prevent incompatible Metadata 2.4 generation
requires = ["setuptools>=61.0.0,<77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reap-web-harvester"
version = "1.1.4"
description = "A fast, beautiful, and modular website archiver."
readme = "README.md"
authors = [
    { name = "Attaya Arka", email = "attayaarka76p@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "rich>=12.0.0",
]

[project.optional-dependencies]
# Optional features can be installed separately to keep the core light
optimize = ["Pillow>=9.0.0"]
pdf = ["playwright>=1.20.0"]

[project.scripts]
reap = "reap.main:main"

[tool.setuptools]
packages = ["reap"]