[build-system]
# Constrain setuptools below 77.0.0 to prevent incompatible Metadata 2.4 generation
requires = ["setuptools>=61.0.0,<77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reap-cli"
version = "2.1.0"
description = "A deterministic web reconstruction and deployment engine."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Attaya Arka", email = "attayaarka76p@gmail.com" }
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Archiving :: Mirroring",
]
dependencies = [
    "rich>=12.0.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
# Optional features can be installed separately to keep the core light
optimize = ["Pillow>=9.0.0"]
pdf = ["playwright>=1.20.0"]

[project.urls]
Homepage = "https://github.com/arXiVius/reap-cli"
Repository = "https://github.com/arXiVius/reap-cli"
Issues = "https://github.com/arXiVius/reap-cli/issues"

[project.scripts]
reap = "reap.main:main"

[tool.setuptools]
packages = ["reap"]